# vids

./: README.md  newvid.sh  pyproject.toml  ubuntu-packages
docs/: index.html
mem/: Makefile  debug.py  main.py  manim.cfg  script.txt  todo.txt
tools/: with-pyenv.source.sh
