[project]
name = "vids"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas McKee",email = "caffeine.storm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12 <3.13"
dependencies = [
    "manim (>=0.19.0,<0.20.0)"
]


[tool.poetry]
package-mode = false

[tool.poe.tasks]
lint = "mypy mem/main.py"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
poethepoet = "^0.34.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
